--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -11,10 +11,16 @@ link_directories(
 	${HOLDINGNUTS_SOURCE_DIR}/src/system
 )
 
-add_executable (test
-	test.cpp
+add_executable (gc_test
+	gc_test.cpp
 	../server/GameController.cpp
 	../server/Table.cpp
+	TestCase.cpp
+)
+target_link_libraries(gc_test Poker System)
+
+add_executable (test
+	test.cpp
 )
 target_link_libraries(test Poker System)
 
