--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -57,7 +57,7 @@ QT4_WRAP_CPP (
 	pclient.hpp WMain.hpp SettingsDialog.hpp CreateGameDialog.hpp
 	AboutDialog.hpp GameListTableModel.hpp PlayerListTableModel.hpp GameListSortFilterProxyModel.hpp
 	WTable.hpp ChatBox.hpp DealerButton.hpp Seat.hpp EditableSlider.hpp TimeOut.hpp
-	Chip.hpp ChipStake.hpp Jeton.hpp
+	Chip.hpp ChipStack.hpp
 )
 
 add_executable (
@@ -67,7 +67,7 @@ add_executable (
 	WMain.cpp SettingsDialog.cpp CreateGameDialog.cpp AboutDialog.cpp
 	GameListTableModel.cpp PlayerListTableModel.cpp GameListSortFilterProxyModel.cpp
 	WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp TimeOut.cpp
-	Chip.cpp ChipStake.cpp Jeton.cpp
+	Chip.cpp ChipStack.cpp
 	${aux_src}
 	${sources_MOC} ${QtApp_RCC_SRCS}
 )
