--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -1,6 +1,12 @@
-include_directories (${HOLDINGNUTS_SOURCE_DIR}/src ${HOLDINGNUTS_SOURCE_DIR}/src/system)
+include_directories (
+	${HOLDINGNUTS_SOURCE_DIR}/src
+	${HOLDINGNUTS_SOURCE_DIR}/src/system
+)
 
 add_library(Network Network.c)
 add_library(SysAccess SysAccess.c)
 add_library(System Tokenizer.cpp ConfigParser.cpp Logger.c)
-add_library(Database Database.cpp)
+
+if (ENABLE_SQLITE)
+	add_library(Database Database.cpp)
+endif (ENABLE_SQLITE)
